--- a/README.Rmd
+++ b/README.Rmd
@@ -43,10 +43,10 @@ devtools::install_github("jonathansmart/AquaticLifeHistory")
 ```{r, message=FALSE}
 library(AquaticLifeHistory)
 
-# load example dataset
+# load example data set
 data("growth_data")
 
-# Run fuction with three default model candidates.
+# Run function with three default model candidates.
 # Model parameters, AIC values are returned and a plot with bootstrapped CI's is printed to examine fits.
 Estimate_Growth(growth_data)
 ```
@@ -54,10 +54,10 @@ Estimate_Growth(growth_data)
 ### Perform age-at-maturity analysis
 
 ```{r, message=FALSE}
-# load example dataset
+# load example data set
 data("maturity_data")
 
-# Run fuction to estimate age-at-maturity parameters
+# Run function to estimate age-at-maturity parameters
 Estimate_Age_Maturity(maturity_data)
 
 # A plot can also be returned with bootstrapped CI's.
