--- a/vignettes/Maturity_analyses.Rmd
+++ b/vignettes/Maturity_analyses.Rmd
@@ -33,7 +33,7 @@ glm(formula = Maturity~Age,data = my.data, family = "binomial")
 
 The default link function for a binomial error structure is the logit link function. Therefore this does not need to be specified.
 
-All maturity analyses using a logistic ogive are fitted in this manner and this is the basic operation occurring in all the maturity functions in the `AquaticLifeHistory` package. However, getting all of the information needed to produce analyses for publication can involve several steps with a few different decisions needed. Therefore the `Estimate_Age_Maturity` and `Estimate_Len_Maturity` functions handle much of these additional steps. However, it is important for the user to understand that these are basically wrapper functions around a glm call. As such the analyses inside thes functions are simple to implement outside of this package.
+All maturity analyses using a logistic ogive are fitted in this manner and this is the basic operation occurring in all the maturity functions in the `AquaticLifeHistory` package. However, getting all of the information needed to produce analyses for publication can involve several steps with a few different decisions needed. Therefore the `Estimate_Age_Maturity` and `Estimate_Len_Maturity` functions handle much of these additional steps. However, it is important for the user to understand that these are basically wrapper functions around a glm call. As such the analyses inside these functions are simple to implement outside of this package.
 
 The `Estimate_Age_Maturity` and `Estimate_Len_Maturity` functions perform the following:
 
@@ -41,7 +41,7 @@ The `Estimate_Age_Maturity` and `Estimate_Len_Maturity` functions perform the fo
 * Bootstrap the data with a specified number of iterations to produce 95% confidence intervals about the curve
 * Produce a plot of either:
     + A standard logistic ogive with a binomial error structure. This is fit to binary data.
-    + A binned logistic ogive with a quasibinomial error structure. This is fit to proportion mature data for specified length or age bins. These bins are created inside the function using a specified bin width.
+    + A binned logistic ogive with a quasi binomial error structure. This is fit to proportion mature data for specified length or age bins. These bins are created inside the function using a specified bin width.
 * Return the parameter estimates, plots of the maturity ogive or the predicted ogive fits with bootstrapped estimates for the user to produce their own plots (recommended if the outputs are meant for publication).
 
 # Input data
@@ -67,7 +67,7 @@ Both maturity functions produce very similar outputs based on either age or leng
 The `Estimate_Age_Maturity` function unsurprisingly estimates age-at-maturity. In doing so it gives you a choice of model:
 
 * Binomial model fitted to binary data
-* Quasibinomial model fitted to binned proportion mature data
+* Quasi binomial model fitted to binned proportion mature data
 
 The input data is the same for both as the age bins are handled automatically.
 
@@ -101,7 +101,7 @@ Estimate_Age_Maturity(maturity_data, return = "plot", n.bootstraps = 1000, displ
 
 ## Quasibinomial (binned) model
 
-An alternative approach is to bin the data by age class and determine the proportion mature in each age class. This is performed by selecting `error.structure = "quasibinomial"`. Within the function, the binary data is binned by age and the model is fitted with the quasibinomial structure with each age bin weighted by its sample size. Doing so often returns similar parameter estimates:
+An alternative approach is to bin the data by age class and determine the proportion mature in each age class. This is performed by selecting `error.structure = "quasibinomial"`. Within the function, the binary data is binned by age and the model is fitted with the quasi binomial structure with each age bin weighted by its sample size. Doing so often returns similar parameter estimates:
 
 ```{r comparison, message=FALSE, warning=FALSE}
 
@@ -152,7 +152,7 @@ Estimate_Len_Maturity(new_data, return = "plot", n.bootstraps = 1000, display.po
 
 ## Quasibinomial (binned) model
 
-An additional argument is needed to use a quasibinomial model. Previously, we binned age by year class as there is no other sensible way to go about this. However, for length the bin width needs to be specified and this is very important. This is done using the `bin.width` argument.
+An additional argument is needed to use a quasi binomial model. Previously, we binned age by year class as there is no other sensible way to go about this. However, for length the bin width needs to be specified and this is very important. This is done using the `bin.width` argument.
 
 
 ```{r bin width, warning=FALSE,  fig.height = 6, fig.width =8}
