--- a/vignettes/Growth_estimation.Rmd
+++ b/vignettes/Growth_estimation.Rmd
@@ -4,9 +4,11 @@ author: "Jonathan Smart"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Growth estimation}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteIndexEntry{Growth estimation example using the AquaticLifeHistory package}
   %\VignetteEncoding{UTF-8}
+  %\VignetteEngine{knitr::rmarkdown}
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include = FALSE}
@@ -68,8 +70,11 @@ head(growth_data)
 
 Length-at-age 95% confidence intervals will be produced for the growth curve through bootstrapping with 1000 iterations being default. The `Estimate_growth()` will return a list of parameter estimates for three candidate models: the von Bertalanffy growth function ("VB"), Gompertz growth function ("Gom") and Logistic growth function ("Log"). The $AIC$ results for each model will also be returned as a list element, demonstrating which growth model best fit the data. A plot will be printed with the growth curves for all included models.
 
-```{r,  message=FALSE, fig.height = 6, fig.width = 8}
+```{r,  message=FALSE, fig.height = 6, fig.width = 8, eval=FALSE}
 Estimate_Growth(data = growth_data)
+```
+```{r,  message=FALSE, fig.height = 6, fig.width = 8, echo =FALSE}
+Estimate_Growth(data = growth_data, n.bootstraps = 10)
 ```
 The `Estimate_Growth()` function produces these outputs in three steps:
 
@@ -79,45 +84,70 @@ The `Estimate_Growth()` function produces these outputs in three steps:
 3. Bootstrapping is performed to determine 95% confidence intervals along the growth curve. These are included in the plot or returned to the user if `plots = FALSE` is used.
     + The bootstrap iterations are specified using the `n.bootstraps` argument. The default is 1000.
 
-##Fitting specific models
+## Fitting specific models
 
 One model can also be specified using the `models` argument:
 
-```{r,  message=FALSE, fig.height = 6, fig.width = 8}
+```{r,  message=FALSE, fig.height = 6, fig.width = 8, eval = FALSE}
 Estimate_Growth(data = growth_data, models = "VB")
+```
+```{r,  message=FALSE, fig.height = 6, fig.width = 8, echo=FALSE}
+Estimate_Growth(data = growth_data, models = "VB", n.bootstraps = 10)
 ```
 Or several can be specified:
 
-```{r,  message=FALSE, fig.height = 6, fig.width = 8}
+```{r,  message=FALSE, fig.height = 6, fig.width = 8, eval = FALSE}
 Estimate_Growth(data = growth_data, models = c("Log", "Gom"))
+```
+```{r,  message=FALSE, fig.height = 6, fig.width = 8, echo = FALSE}
+Estimate_Growth(data = growth_data, models = c("Log", "Gom"), n.bootstraps = 10)
 ```
 
 Note: The three models must be specified as "VB", "Log" and "Gom". Otherwise there will be an error
 
-```{r, error = TRUE,  message=FALSE, fig.height = 6, fig.width = 8}
+```{r, error = TRUE,  message=FALSE, fig.height = 6, fig.width = 8, eval = FALSE}
 Estimate_Growth(data = growth_data, models = "VBGF")
 ```
+```{r, error = TRUE,  message=FALSE, fig.height = 6, fig.width = 8,echo=FALSE}
+Estimate_Growth(data = growth_data, models = "VBGF", n.bootstraps = 10)
+```
 
-##Plot alterations
+## Plot alterations
 If you are plotting one model you probably don't want a legend included. This can be removed using the `plot.legend` argument. This also works when several models are plotted
 
-```{r,  message=FALSE, fig.height = 6, fig.width = 8}
+```{r,  message=FALSE, fig.height = 6, fig.width = 8, eval = FALSE}
 Results <- Estimate_Growth(data = growth_data, models = "VB", plot.legend = FALSE)
+```
+```{r,  message=FALSE, fig.height = 6, fig.width = 8, echo = FALSE}
+Results <- Estimate_Growth(data = growth_data, models = "VB", plot.legend = FALSE, n.bootstraps = 10)
 ```
 Lastly, the y-axis label will automatically scale the unit from mm to cm based on the input data
 
-```{r, message=FALSE, fig.height = 6, fig.width = 8}
+```{r, message=FALSE, fig.height = 6, fig.width = 8, eval = FALSE}
 new.dat <- growth_data
 new.dat$Length <- new.dat$Length/10
 
 Results <- Estimate_Growth(new.dat)
 ```
+```{r, message=FALSE, fig.height = 6, fig.width = 8, echo=FALSE}
+new.dat <- growth_data
+new.dat$Length <- new.dat$Length/10
 
-##Returning length-at-age estimates
+Results <- Estimate_Growth(new.dat, n.bootstraps = 10)
+```
+
+## Returning length-at-age estimates
 It is recommended that users create their own plots for publications. Therefore setting `plots = FALSE` will provide these estimates as an additional list object rather than printing a plot.
 
-```{r,  message=FALSE, fig.height = 6, fig.width = 8}
+```{r,  message=FALSE, fig.height = 6, fig.width = 8, eval=FALSE}
 results <- Estimate_Growth(data = growth_data, plots = FALSE)
+
+Length_at_age_estimates <- results$Estimates
+
+head(Length_at_age_estimates)
+```
+```{r,  message=FALSE, fig.height = 6, fig.width = 8, echo=FALSE}
+results <- Estimate_Growth(data = growth_data, plots = FALSE, n.bootstraps = 10)
 
 Length_at_age_estimates <- results$Estimates
 
@@ -130,8 +160,12 @@ Multi-model inference (MMI) can be useful when no particular candidate model pro
 
 `Calculate_MMI` takes the outputs of `Estimate_Growth` with `plots = FALSE` (so that length-at-age estimates are available) and will calculate MMI parameters and standard errors as well as model averaged length-at-age estimates.
 
-```{r, message=FALSE}
+```{r, message=FALSE, eval = FALSE}
 results <- Estimate_Growth(data = growth_data,  plots = FALSE)
+Calculate_MMI(results)
+```
+```{r, message=FALSE, echo=FALSE}
+results <- Estimate_Growth(data = growth_data,  plots = FALSE, n.bootstraps = 10)
 Calculate_MMI(results)
 ```
 Be aware that bootstrapping cannot be applied for MMI so no length-at-age errors are available. Also multi-model theory dictates that model averaged errors will be larger than the cumulative errors of candidate models. So don't be alarmed if you get large parameter standard errors.
@@ -140,7 +174,7 @@ Be aware that bootstrapping cannot be applied for MMI so no length-at-age errors
 
 Separating the sexes is common and is achieved by sub setting data and running the function multiple times. They can then be combined and plotted afterwards. This can be done for one model or several. Here is an example using the `ggplot2` package.
 
-```{r, warning = FALSE, message=FALSE, fig.height = 8, fig.width = 6}
+```{r, warning = FALSE, message=FALSE, fig.height = 8, fig.width = 6, eval = FALSE}
 # Create data.frames of separate sexes
 Females <- dplyr::filter(growth_data, Sex == "F")
 Males <- dplyr::filter(growth_data, Sex == "M")
@@ -170,20 +204,76 @@ ggplot(combined_data, aes(x = Age, y = AVG, fill = Model, col = Model)) +
   scale_x_continuous(name = "Age (years)", limits = c(0,18), expand = c(0,0))+
   theme_bw()
 ```
+```{r, warning = FALSE, message=FALSE, fig.height = 8, fig.width = 6, echo = FALSE}
+# Create data.frames of separate sexes
+Females <- dplyr::filter(growth_data, Sex == "F")
+Males <- dplyr::filter(growth_data, Sex == "M")
+
+# Estimate growth
+Female_ests <- Estimate_Growth(Females,n.bootstraps = 10, plots = FALSE)
+Male_ests <- Estimate_Growth(Males, n.bootstraps = 10,plots = FALSE)
+
+# Combine data sets with a new variable designating sex
+Female_LAA <- Female_ests$Estimates
+Female_LAA$Sex <- "F"
+
+Male_LAA <- Male_ests$Estimates
+Male_LAA$Sex <- "M"
+
+combined_data <- rbind(Male_LAA, Female_LAA)
+
+library(ggplot2)
+
+ggplot(combined_data, aes(x = Age, y = AVG, fill = Model, col = Model)) +
+  facet_wrap(~Sex, ncol = 1, scales = "free")+
+  geom_point(data = Males, aes(x = Age, y = Length, fill = NULL, col = NULL), alpha = .3) +
+  geom_point(data = Females, aes(x = Age, y = Length, fill = NULL, col = NULL), alpha = .3) +
+  geom_ribbon(aes(ymin = low, ymax = upp, col = NA), alpha = 0.2)+
+  geom_line(size = 1)+
+  scale_y_continuous(name = "Length (mm)", limits = c(0,2500), expand = c(0,0))+
+  scale_x_continuous(name = "Age (years)", limits = c(0,18), expand = c(0,0))+
+  theme_bw()
+```
 
 # Combining two and three parameter models
 
 It is common practice for fish species to fix $L_{0}$ as this parameter has a direct relation to length-at-birth (often zero for fish). This is done via a single argument `Birth.Len`. If this is unspecified then three parameter models are used. However, if `Birth.Len` is specified then two parameters are used with that value used to fix the $L_{0}$ parameter. 
 
-```{r, message=FALSE, fig.height = 6, fig.width = 8}
+```{r, message=FALSE, fig.height = 6, fig.width = 8, eval=FALSE}
 Estimate_Growth(growth_data, Birth.Len = 600)
+```
+```{r, message=FALSE, fig.height = 6, fig.width = 8, echo=FALSE}
+Estimate_Growth(growth_data, Birth.Len = 600, n.bootstraps = 10)
 ```
 These can be plotted alongside there three parameter versions as well. Here is an example for the VBGF
 
-```{r, message=FALSE, fig.height = 6, fig.width = 8}
+```{r, message=FALSE, fig.height = 6, fig.width = 8, eval = FALSE}
 # Fit models
 two_pars <- Estimate_Growth(growth_data, models = "VB", Birth.Len = 600, plots = FALSE)
 three_pars <- Estimate_Growth(growth_data, models = "VB", plots = FALSE)
+
+# Change Model name to represent how many parameters they have
+two_pars_Ests <- two_pars$Estimates
+two_pars_Ests$Model <- "2 parameter VBGF"
+
+three_pars_Ests <- three_pars$Estimates
+three_pars_Ests$Model <- "3 parameter VBGF"
+
+combined_data <- rbind(two_pars_Ests, three_pars_Ests)
+
+ggplot(combined_data, aes(x = Age, y = AVG, fill = Model, col = Model)) +
+  geom_point(data = growth_data, aes(x = Age, y = Length, fill = NULL, col = NULL), alpha = .3) +
+  geom_ribbon(aes(ymin = low, ymax = upp, col = NA), alpha = 0.2)+
+  geom_line(size = 1)+
+  scale_y_continuous(name = "Length (mm)", limits = c(0,2500), expand = c(0,0))+
+  scale_x_continuous(name = "Age (years)", limits = c(0,18), expand = c(0,0))+
+  theme_bw() +
+  theme(legend.position = c(0.8, 0.2))
+```
+```{r, message=FALSE, fig.height = 6, fig.width = 8, echo=FALSE}
+# Fit models
+two_pars <- Estimate_Growth(growth_data, models = "VB", Birth.Len = 600, plots = FALSE, n.bootstraps = 10)
+three_pars <- Estimate_Growth(growth_data, models = "VB", plots = FALSE, n.bootstraps = 10)
 
 # Change Model name to represent how many parameters they have
 two_pars_Ests <- two_pars$Estimates
@@ -210,8 +300,11 @@ A two parameter model is demonstrated here for sharks as this is the data used i
 
 Each of the growth models fit in these analyses have a multivariate normal distribution. This means that each parameter has a normal distribution but are correlated to one another. Therefore, if you would like to use these parameters in simulation analyses, a correlation matrix is needed to include parameter values in the simulations. This is not an analysis that is included in this package. However, the ability to return the correlation matrix is included in the `Estimate_Growth()` function by using `correlation.matrix = TRUE`.
 
-```{r}
+```{r, eval = FALSE}
 Estimate_Growth(growth_data, correlation.matrix = TRUE)
+```
+```{r, echo=FALSE}
+Estimate_Growth(growth_data, correlation.matrix = TRUE, n.bootstraps = 10)
 ```
 
 Full details on these approaches can be found in:
